Haushaltsplan2018.pdf einnahmen 2018

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fachschafts-Haushalt MathPhysInfo</title>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/7.0.3/highcharts.js"></script>
     <!--script src="https://code.highcharts.com/modules/sunburst.js"></script-->
     <script>
     
@@ -302,27 +302,27 @@ b.plotTop,b=this.group;a?(a={translateX:c[0]+d,translateY:c[1]+e,scaleX:.001,sca
 
             <div id="allgemein" data-tab="allgemein" class="ui bottom attached active tab segment">
                 <p>
-                    Auf dieser Seite stellen wir den Haushalt der Fachschaft MathPhysInfo vor, also den gemeinsam wirtschaftenden Studienfachschaften Mathematik, Physik und Informatik. Unter dem Tab „Einnahmen“ sind alle unsere Einnahmequellen aufgeführt, unter dem Tab „Ausgaben“ findet ihr die Ausgaben der Fachschaft. Die Gelder, die wir im Jahr 2017 nicht ausgegeben haben, werden unter „Ausgaben“ als Rücklagen aufgelistet, sodass die Differenz zwischen Einnahmen und Ausgaben null ergibt.
+                    Auf dieser Seite stellen wir den Haushalt der Fachschaft MathPhysInfo vor, also den gemeinsam wirtschaftenden Studienfachschaften Mathematik, Physik und Informatik. Unter dem Tab „Einnahmen“ sind alle unsere Einnahmequellen aufgeführt, unter dem Tab „Ausgaben“ findet ihr die Ausgaben der Fachschaft.
                 </p><p>
                     Die Einnahmen und Ausgaben sind jeweils in Unterposten verschiedener Ebenen unterteilt, welche man durch Anklicken auswählen kann. Eine Ebene nach oben kommt man, indem man den Button oben rechts mit dem Titel der Überkategorie anklickt.
                 </p><p>
                     Diese visuelle Aufbereitung ist entstanden, weil es uns wichtig ist, dass die Studierenden sehen, was mit ihrem Geld passiert. Eine transparente und nachvollziehbare Verwendung von öffentlichen Finanzen sind uns ein großes Anliegen. Das Vergleichen von Finanzvolumen bei Beschlüssen aufgrund von Zahlen ist manchmal schwierig, nun aber durch die graphische Darstellung einfacher und schneller erkennbar.
                 </p><p>    
-                    Die einzelnen Finanzbeschlüsse kann man den Protokollen auf unserer <a href="https://www.mathphys.stura.uni-heidelberg.de" target="_blank">Website</a> entnehmen und finden auf der Grundlage unseres <a href="Haushaltsplan2017.pdf" target="_blank">Haushaltsplans</a> statt.
+                    Die einzelnen Finanzbeschlüsse kann man den Protokollen auf unserer <a href="https://www.mathphys.stura.uni-heidelberg.de" target="_blank">Website</a> entnehmen und finden auf der Grundlage unseres <a href="Haushaltsplan2018.pdf" target="_blank">Haushaltsplans</a> statt.
                 </p>
 
             </div>
 
             <div id="einnahmen" data-tab="einnahmen" class="ui bottom attached tab segment">
-                <h2 id="einnahmenname">Einnahmen 2017</h2>
+                <h2 id="einnahmenname">Einnahmen 2018</h2>
                 <p id="einnahmentext">Die Fachschaft hat verschiedene Einnahmequellen, die es uns ermöglichen, unsere Aufgaben sachgerecht zu erfüllen. Der wichtigste Einnahmenposten sind die Beiträge, die alle Studierenden an die Verfasste Studierendenschaft zahlen, aber auch die anderen Quellen sind in dieser Grafik aufgeführt.</p>
-                <p id="einnahmenvalue">Betrag: 37.311,59 €</p>
+                <p id="einnahmenvalue">Betrag: 62.568,44 €</p>
             </div>
 
             <div id="ausgaben" data-tab="ausgaben" class="ui bottom attached tab segment">
-                <h2 id="ausgabenname">Ausgaben & Rücklagen 2017</h2>
+                <h2 id="ausgabenname">Ausgaben & Rücklagen 2018</h2>
                 <p id="ausgabentext">Damit die Fachschaft ihren Aufgaben nachkommen kann, sind verschiedene Ausgaben nötig. Die Mittel, die zum Ende des Haushaltsjahres nicht verausgabt wurden, fließen entweder in die Rücklage unserer Fachschaft oder in die Rücklage der Studierendenschaft (falls die Rücklage der Fachschaft ihre Maximalgröße erreicht hat).</p>
-                <p id="ausgabenvalue">Betrag: 37.311,59 €</p>
+                <p id="ausgabenvalue">Betrag: 41.965,77 €</p>
             </div>
 
         </div>
